[package]
name = "aoc_2018"
version = "0.1.0"
authors = ["Petr Volf <petr.volf216@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.3.4"
anyhow = "1.0.32"
nom = "6"

[profile.release]
debug = true